fix: noValue alignCenter

--- a/nu-code/src/components/FinanceList/style.module.css
+++ b/nu-code/src/components/FinanceList/style.module.css
@@ -10,6 +10,10 @@
 }
 
 .noCards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   height: 120px;
 }
 
@@ -61,6 +65,10 @@
     p {
       font-size: 20px;
     }
+  }
+
+  .noCards {
+    display: block;
   }
 
   .buttons {
